Prevent transition flickering when initialising the sidebar

--- a/src/scss/dark/_sidebar.scss
+++ b/src/scss/dark/_sidebar.scss
@@ -20,7 +20,7 @@ body.dark {
 
     > a.lockPinned {
       background: $darkContentBackground;
-      box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.2);
+      box-shadow: 1px 1px 11px rgba(0, 0, 0, 0.2);
     }
 
     > div.scrollBox {
